# zen-skein

./: .gitignore  README  next.config.js  package-lock.json  package.json  types.ts
cpp/: CMakeLists.txt  skein3.cpp
lib/: mock-wasm.ts  skein3.ts  wasm-hash.ts
pages/: index.tsx
pages/api/: hash.ts  license.ts  stats.ts
types/: index.ts
